--- a/sprint8/components/footer/Footer.module.css
+++ b/sprint8/components/footer/Footer.module.css
@@ -6,7 +6,7 @@
   background-color: #2f3429;
   padding: 30px;
   width: 100%;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
