--- a/sprint8/components/header/Header.module.css
+++ b/sprint8/components/header/Header.module.css
@@ -3,7 +3,12 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 0 20px;
-  height: 80px;
+  min-height: 80px;
   background-color: #2f3429;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
 }
