--- a/sprint8/components/header/Header.module.css
+++ b/sprint8/components/header/Header.module.css
@@ -8,7 +8,13 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.icon {
+.icon,
+.back_icon {
   width: 20px;
   height: 20px;
+}
+
+.back_icon:hover {
+  transform: scale(1.2);
+  transition: ease-in 0.2s;
 }
